--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,18 @@
             <artifactId>netty-all</artifactId>
             <version>4.1.55.Final</version>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.3.2</version>
+        </dependency>
+
 
 
     </dependencies>
